prevent layout shift

--- a/src/components/Group.module.scss
+++ b/src/components/Group.module.scss
@@ -26,7 +26,9 @@
     height: auto;
     flex-grow: 1;
     &:last-child {
-      flex-grow: 10;
+      // nasty hack but this will prevent layout shift in 2022
+      // this combo basically expresses that 1 should grow if nothing else can
+      flex-grow: 10000000;
     }
   }
 }
